--- a/_includes/head.html
+++ b/_includes/head.html
@@ -129,6 +129,9 @@
 
   <!-- Image Optimizer -->
   <script src="{{ "/assets/js/image-optimizer.js" | relative_url }}" defer></script>
+  
+  <!-- Ad Optimizer (CLS 방지) -->
+  <script src="{{ "/assets/js/ad-optimizer.js" | relative_url }}" defer></script>
 
   <!-- Font Optimizer -->
   {% include font-optimizer.html %}
